# product_judge

./: .gitignore  LICENSE  requirements.txt
src/camera_driver/: TODO.md
src/card_terminal/: main.py  readme.md
src/card_terminal/protocol/: __init__.py  const.py  payload.py  protocol.py
src/card_terminal_server/: main.py  parse.py  test.py
src/card_terminal_server/payment/: __init__.py  const.py  manager.py  payload.py  structure.py
src/deadbolt_driver/: TODO.md
src/io_board/: api.py  main.py  openapi.json  protocol.py  serial.py  serial_io.py
src/loadcell_driver/: TODO.md
src/mqtt_client/: main.py  settings.py
src/mqtt_client/core/: core.py  router.py  router.py.old  scheduler.py
src/mqtt_client/protocol/: IF01.py  IF02.py  IF03.py  IF04.py  protocol.py
src/product_judge/: GUIDE_FOR_TESTERS.md  PULL_REQUEST.md  README.md  __init__.py  main.py  pyproject.toml
src/product_judge/database/: __init__.py  product_db.py
src/product_judge/engine/: __init__.py  decision_engine.py  models.py
src/product_judge/interfaces/: __init__.py  api_models.py
src/product_judge/tests/: __init__.py  test_engine.py
src/product_judge/vision/: __init__.py  hand_filter.py  top5_extractor.py  yolo_wrapper.py
src/product_judge/weight/: __init__.py  count_calculator.py
